Fix background color on mobile safari

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
   --color-doodle-orange: #f58c29;
   --color-doodle-purple: #9250ed;
   --color-doodle-bg: #fdeacb;
+  --color-doodle-chrome: #fefaf4;
 
   /* Custom 3D Button Shadows */
   --shadow-button-3d: 0 4px 8px rgba(0, 0, 0, 0.2), 0 2px 4px rgba(0, 0, 0, 0.1);
